# EngineDashboard

./: .gitignore  CMakeLists.txt  README.md  VERSION.cmake  appveyor.yml
.circleci/: config.yml
ci/: circleci-build-android-arm64.sh  circleci-build-android-armhf.sh  circleci-build-debian.sh  circleci-build-flatpak.sh  circleci-build-jammy.sh  circleci-build-macos.sh  circleci-build-msvc.bat  circleci-build-raspbian-armhf.sh  circleci-build-ubuntu-docker.sh
cmake/: PluginConfigure.cmake  PluginInstall.cmake  PluginLocalization.cmake  PluginPackage.cmake  PluginSetup.cmake  version.h.in
inc/: dashboard_pi.h  dial.h  instrument.h  rudder_angle.h  speedometer.h
libs/ocpn-api/: CMakeLists.txt  ocpn_plugin.h
libs/ocpn-api/msvc/: opencpn.lib
manual/: antora.yml  site.yml
manual/engine-dash/: antora.yml  site.yml
manual/engine-dash/modules/ROOT/pages/: engine-dash.adoc
manual/modules/ROOT/pages/: index.adoc
nmea0183/inc/: nmea0183.h  nmea0183.hpp  response.hpp  rpm.hpp  rsa.hpp  sentence.hpp  xdr.hpp
nmea0183/src/: expid.cpp  hexvalue.cpp  nmea0183.cpp  response.cpp  rpm.cpp  rsa.cpp  sentence.cpp  talkerid.cpp  xdr.cpp
po/: POTFILES.in  engine_dashboard.pot
prebuilt/: engine_dashboard_pi_1.1.0-1_amd64.deb  engine_dashboard_pi_1.1.0-1_armhf.deb
src/: dashboard_pi.cpp  dashboard_pi.h  dial.cpp  dial.h  icons.cpp  icons.h  instrument.cpp  instrument.h  ocpn_plugin.h  rudder_angle.cpp  rudder_angle.h  speedometer.cpp  speedometer.h  version.h
src/nmea0183/: expid.cpp  hexvalue.cpp  nmea0183.cpp  nmea0183.h  nmea0183.hpp  response.cpp  response.hpp  rsa.cpp  rsa.hpp  sentence.cpp  sentence.hpp  talkerid.cpp
